# covins

./: .gitattributes  .gitignore  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
covins_backend/: CMakeLists.txt
covins_backend/config/: config_backend.yaml
covins_backend/covins_sys/src/: pcl_node.cpp
covins_backend/include/covins/covins_base/: landmark_base.hpp
covins_backend/include/covins/pcl/: pcltest.hpp  pclutil.hpp
covins_backend/src/covins_backend/: backend.cpp  map_be.cpp
covins_backend/src/pcl/: pcltest.cpp  pclutil.cpp
covins_comm/: CMakeLists.txt
covins_comm/config/: config_comm.yaml
orb_slam3/: CMakeLists.txt  CMakeListsdep.txt  package.xml  run-frontend-node.sh
orb_slam3/covins_examples/: euroc_mono_inertial.sh
orb_slam3/nodes/: monocular_inertial_node.cpp
util/: build-orbslam3.sh  initialize-covins-backend.sh  run-backend-visualization.sh  run-covins-backend.sh  run-ros.sh  run-rviz.sh
