<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>orb_slam3</name>
  <version>1.0.0</version>
  <description>orbslam3 based frontend</description>

  <maintainer email="collaborative.slam@gmail.com"> </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>covins_comm</depend>
  <depend>roscpp</depend>
  <depend>opencv3_catkin</depend>
  <depend>cv_bridge</depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>definitions</depend>

  <export>
  </export>
</package>
